# slackwh2x

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.build.yml  docker-compose.yml  slack2x.example.toml  slack2x.example.yaml
src/: emoji_replacement.rs  main.rs  mapping.rs
src/handlers/: mod.rs
src/handlers/handler/: mod.rs
src/handlers/slack/: mod.rs
src/handlers/teams/: mod.rs
