[package]
name = "slack-hook-to-x"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version="3"}
toml = {}
env_logger = {}
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }